@@ -1,1 +1,1 @@
-debian/00_remove_obsolete_plugins_in_unity_session_v1.py
+debian/00_remove_obsolete_plugins_in_unity_session_v2.py
