@@ -1,6 +1,11 @@
 compiz (1:0.9.12.2+16.04.20160714-0ubuntu2) UNRELEASED; urgency=medium
 
+  [ Andrea Azzarone ]
   * Don't activate expo if not needed (1x1 setup) (LP: #1606254)
+
+  [ Marco Trevisan (Treviño) ]
+  * Unity MigrationScript: sync gsettings on exit, and only use dconf on
+    failure (LP: #1605011)
 
  -- Andrea Azzarone <azzaronea@gmail.com>  Mon, 01 Aug 2016 11:16:13 +0200
 
